<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditarUsuarioFragment"
    android:background="#000000">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Actualizar mi información"
            android:gravity="center"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF">

        </TextView>

        <EditText
            android:id="@+id/editTextTextEmailAddress4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"
            android:layout_below="@id/texto"
            android:textColorHint="#FFFFFF" />
        <EditText
            android:id="@+id/editTextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:layout_margin="10dp"
            android:textColor="#FFFFFF"
            android:layout_below="@id/editTextTextEmailAddress4"
            android:textColorHint="#FFFFFF" />
        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PasswordNueva"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:layout_margin="10dp"
            android:layout_below="@id/editTextUser"
            />


        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PasswordNueva2"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:layout_margin="10dp"
            android:layout_below="@id/editTextTextPassword"
            />


        <Button
            android:id="@+id/guardar"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:text="Guardar cambios"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/editTextTextPassword2"
            />
    </RelativeLayout>


</FrameLayout>